--- a/views/partials/example-requests/bash.hbs
+++ b/views/partials/example-requests/bash.hbs
@@ -1,8 +1,8 @@
 ```bash
-curl -X {{$route['methods'][0]}} \
-    {{$route['methods'][0] == 'GET' ? '-G ' : ''}}"{{ rtrim($baseUrl, '/')}}/{{ ltrim($route['boundUri'], '/') }}@if(count($route['cleanQueryParameters']))?{!! \Knuckles\Scribe\Tools\WritingUtils::printQueryParamsAsString($route['cleanQueryParameters']) !!}@endif" @if(count($route['headers']))\
-@foreach($route['headers'] as $header => $value)
-    -H "{{$header}}: {{ addslashes($value) }}"@if(! ($loop->last) || ($loop->last && count($route['bodyParameters']))) \
+curl -X {{route.methods.[0] }} \
+    {{#eq route.methods.[0] 'GET'}}-G {{/eq}}"{{ rtrim(baseUrl, '/')}}/{{ ltrim($route['boundUri'], '/') }}@if(count($route['cleanQueryParameters']))?{!! \Knuckles\Scribe\Tools\WritingUtils::printQueryParamsAsString($route['cleanQueryParameters']) !!}@endif" @if(count($route['headers']))\
+{{#each route.headers }}
+    -H "{{@key}}: {{ addslashes($value) }}"@if(! ($loop->last) || ($loop->last && count($route['bodyParameters']))) \
 @endif
 @endforeach
 @endif
