--- a/views/partials/frontmatter.hbs
+++ b/views/partials/frontmatter.hbs
@@ -1,7 +1,7 @@
 title: {{ settings.title }}
 
 language_tabs:
-{{#each settings.languages }}
+{{#each settings.exampleLanguages }}
 - {{ this }}
 {{/each}}
 
@@ -16,6 +16,6 @@ logo: {{ settings.logo }}
 
 toc_footers:
 {{#if showPostmanCollectionButton }}
-- <a href="{{ $postmanCollectionLink }}">View Postman Collection</a>
+- <a href="{{ postmanCollectionLink }}">View Postman Collection</a>
 {{/if}}
 - <a href='http://github.com/knuckleswtf/scribe'>Documentation powered by Scribe ✍</a>
