--- a/views/partials/group.hbs
+++ b/views/partials/group.hbs
@@ -2,6 +2,6 @@
 {{{ groupDescription }}}
 
 {{#each endpoints}}
-{{> partials.endpoint route=this exampleLanguages=../settings.exampleLanguages baseUrl=../settings.baseUrl }}
+{{> partials.endpoint endpoint=this exampleLanguages=../settings.exampleLanguages baseUrl=../settings.baseUrl }}
 {{/each}}
 
