--- a/views/partials/example-requests/javascript.hbs
+++ b/views/partials/example-requests/javascript.hbs
@@ -1,48 +1,46 @@
-```javascript
 const url = new URL(
-    "{{ rtrim($baseUrl, '/') }}/{{ ltrim($route['boundUri'], '/') }}"
+    "{{ baseUrl }}{{ endpoint.boundUri }}"
 );
-@if(count($route['cleanQueryParameters']))
+{{#if (isNonEmptyObject endpoint.cleanQueryParameters) }}
 
-let params = {!! \Knuckles\Scribe\Tools\WritingUtils::printQueryParamsAsKeyValue($route['cleanQueryParameters'], "\"", ":", 4, "{}") !!};
+let params = {{{ printQueryParamsAsKeyValue endpoint.cleanQueryParameters }}};
 Object.keys(params)
     .forEach(key => url.searchParams.append(key, params[key]));
-@endif
+{{/if}}
 
-@if(!empty($route['headers']))
+{{#if (isNonEmptyObject endpoint.headers) }}
 let headers = {
-@foreach($route['headers'] as $header => $value)
-    "{{$header}}": "{{$value}}",
-@endforeach
-@if(!array_key_exists('Accept', $route['headers']))
+{{#each endpoint.headers}}
+    "{{@key}}": "{{this}}",
+{{/each}}
+{{#unless endpoint.headers.Accept }}
     "Accept": "application/json",
-@endif
+{{/unless}}
 };
-@endif
+{{/if}}
 
-@if(count($route['fileParameters']))
+{{#if (isNonEmptyObject endpoint.fileParameters) }}
 const body = new FormData();
-@foreach($route['cleanBodyParameters'] as $parameter => $value)
-@foreach( \Knuckles\Scribe\Tools\WritingUtils::getParameterNamesAndValuesForFormData($parameter,$value) as $key => $actualValue)
-body.append('{!! $key !!}', '{!! $actualValue !!}');
-@endforeach
-@endforeach
-@foreach($route['fileParameters'] as $parameter => $file)
-body.append('{!! $parameter !!}', document.querySelector('input[name="{!! $parameter !!}"]').files[0]);
-@endforeach
-@elseif(count($route['cleanBodyParameters']))
-let body = {!! json_encode($route['cleanBodyParameters'], JSON_PRETTY_PRINT) !!}
-@endif
+{{#each endpoint.cleanBodyParameters}}
+{{#each (getParameterNamesAndValuesForFormData @key this) }}
+body.append('{{{ @key }}}', '{{{ this }}}');
+{{/each}}
+{{/each}}
+{{#each endpoint.fileParameters }}
+body.append('{{{ @key }}}', document.querySelector('input[name="{{{ @key }}}"]').files[0]);
+{{/each}}
+{{else if (isNonEmptyObject endpoint.cleanBodyParameters) }}
+let body = {{{ JSONstringify endpoint.cleanBodyParameters 4 }}}
+{{/if}}
 
 fetch(url, {
-    method: "{{$route['methods'][0]}}",
-@if(count($route['headers']))
+    method: "{{endpoint.methods.[0]}}",
+{{#if (isNonEmptyObject endpoint.headers) }}
     headers: headers,
-@endif
-@if(count($route['fileParameters']) || count($route['cleanBodyParameters']))
+{{/if}}
+{{#or (isNonEmptyObject endpoint.fileParameters) (isNonEmptyObject endpoint.cleanBodyParameters) }}
     body: body
-@endif
+{{/or}}
 })
-    .then(response => response.json())
-    .then(json => console.log(json));
-```
+.then(response => response.json())
+.then(json => console.log(json));
