--- a/views/components/field-details.hbs
+++ b/views/components/field-details.hbs
@@ -1,4 +1,4 @@
-<code><b>{{ name }}</b></code>&nbsp; {{#if type}}<small>{{ type }}</small>{{/if}} {{#unless required}}
+<b><code>{{ name }}</code></b>&nbsp; {{#if type}}<small>{{ type }}</small>{{/if}} {{#unless required}}
     <i>optional</i>{{/unless}}
 <br>
 {{{ $description }}}
