Fix types; show parameter description

--- a/views/components/field-details.hbs
+++ b/views/components/field-details.hbs
@@ -1,5 +1,5 @@
 <b><code>{{ name }}</code></b>&nbsp; {{#if type}}<small>{{ type }}</small>{{/if}} {{#unless required}}
     <i>optional</i>{{/unless}}
 <br>
-{{{ $description }}}
+{{{ description }}}
 
