--- a/views/partials/frontmatter.hbs
+++ b/views/partials/frontmatter.hbs
@@ -18,4 +18,7 @@ toc_footers:
 {{#if settings.postman.enabled }}
 - <a href="collection.json">View Postman Collection</a>
 {{/if}}
+{{#if settings.openapi.enabled }}
+- <a href="openapi.yaml">View OpenAPI Spec</a>
+{{/if}}
 - <a href='http://github.com/knuckleswtf/scribe'>Documentation powered by Scribe ✍</a>
