--- a/resources/views/partials/group.hbs
+++ b/resources/views/partials/group.hbs
@@ -2,6 +2,6 @@
 {{{ groupDescription }}}
 
 {{#each endpoints}}
-{{> partials.endpoint endpoint=this exampleLanguages=../settings.exampleLanguages baseUrl=../settings.baseUrl }}
+{{> partials.endpoint endpoint=this exampleLanguages=../settings.exampleLanguages baseUrl=../settings.baseUrl auth=../auth settings=../settings}}
 {{/each}}
 
