Update config file

--- a/resources/views/index.hbs
+++ b/resources/views/index.hbs
@@ -7,8 +7,10 @@
 
 {{{ introText }}}
 
+{{#if isInteractive}}
 <scr{{!}}ipt src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></scr{{!}}ipt>
 <scr{{!}}ipt>
     var baseUrl = "{{{ baseUrl }}}";
 </scr{{!}}ipt>
 <scr{{!}}ipt src="js/tryitout.js"></scr{{!}}ipt>
+{{/if}}
