--- a/resources/views/partials/endpoint.hbs
+++ b/resources/views/partials/endpoint.hbs
@@ -40,10 +40,10 @@
 <h3>
     Request
     {{#if settings.interactive}}
-    <button type="button" style="background-color: #8fbcd4; padding: 5px 10px; border-radius 5px; border-width: thin;" id="btn-tryout-{{ endpoint.endpointId }}" onclick="tryItOut('{{ endpoint.endpointId }}');">Try it out ⚡</button>
+    <button type="button" style="background-color: #8fbcd4; padding: 5px 10px; border-radius: 5px; border-width: thin;" id="btn-tryout-{{ endpoint.endpointId }}" onclick="tryItOut('{{ endpoint.endpointId }}');">Try it out ⚡</button>
     {{/if}}
-    <button type="button" style="background-color: #c97a7e; padding: 5px 10px; border-radius 5px; border-width: thin;" id="btn-canceltryout-{{ endpoint.endpointId }}" onclick="cancelTryOut('{{ endpoint.endpointId }}');" hidden>Cancel</button>&nbsp;&nbsp;
-    <button type="submit" style="background-color: #6ac174; padding: 5px 10px; border-radius 5px; border-width: thin;" id="btn-executetryout-{{ endpoint.endpointId }}" hidden>Send Request 💥</button>
+    <button type="button" style="background-color: #c97a7e; padding: 5px 10px; border-radius: 5px; border-width: thin;" id="btn-canceltryout-{{ endpoint.endpointId }}" onclick="cancelTryOut('{{ endpoint.endpointId }}');" hidden>Cancel</button>&nbsp;&nbsp;
+    <button type="submit" style="background-color: #6ac174; padding: 5px 10px; border-radius: 5px; border-width: thin;" id="btn-executetryout-{{ endpoint.endpointId }}" hidden>Send Request 💥</button>
 </h3>
 {{#each endpoint.methods }}
 <p>
