--- a/resources/views/index.hbs
+++ b/resources/views/index.hbs
@@ -12,7 +12,7 @@
 <scr{{!}}ipt>
     var baseUrl = "{{{ baseUrl }}}";
 </scr{{!}}ipt>
-<scr{{!}}ipt src="js/tryitout.js"></scr{{!}}ipt>
+<scr{{!}}ipt src="js/tryitout-{{{ scribeVersion }}}.js"></scr{{!}}ipt>
 {{/if}}
 
 > Base URL:
