--- a/resources/views/components/body-parameters.ejs
+++ b/resources/views/components/body-parameters.ejs
@@ -17,10 +17,9 @@
         <% } else if (parameter.__fields) { %>
             <p>
             <details>
-                <summary>
+                <summary style="padding-bottom: 10px;">
                     <%- include("field-details", {...parameter, endpointId, component: 'body', hasChildren: true, isInput: true}) %>
                 </summary>
-                <br>
 
                 <% for (let subfieldName in parameter.__fields) { %>
                     <% let subfield = parameter.__fields[subfieldName]; %>
